--- a/login.html
+++ b/login.html
@@ -216,7 +216,7 @@ top:1000px}
   <input id="email" type="text" placeholder ="Seu Endereço de E-Mail"</placeholder></input><br>
   <input id="senha" type="text" placeholder ="Sua Senha"</placeholder></input>
   <a id="Esqueci" href="recuperar.html">Esqueci minha Senha</a>
-<a href="youtube.com" ><button id="teste">Iniciar sessão</button></a>
+<a href="home.html" ><button id="teste">Iniciar sessão</button></a>
 
 
  <hr id="hr3"><a href="cadastro.html" ><button id="teste1">Cadastre-se</button></a><hr id="hr4">
